# PDFsplitter

./: .qmake.stash  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  connect.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  program.cpp  program.h  program.pro
.cache/clangd/index/: main.cpp.B0E8DD3C541B46C6.idx  mainwindow.cpp.CBA4ABD4DE1C3C30.idx  mainwindow.h.57B6709B71636A6A.idx
